--- a/_data/speakers/speakers.yml
+++ b/_data/speakers/speakers.yml
@@ -3,19 +3,19 @@
   twitter_handle: '@rstankov'
   photo_url: /assets/images/pages/home/speakers/radoslav-stankov.jpg
   bio: |
-    Radoslav is currently the head of engineering at Product Hunt (by AngelList). Lately, juggling between Ruby and JavaScript projects. Organizer of <a href="http://react-not-a-conf.com/" target="_blank">React.NotAConf</a> conference and <a href="https://www.meetup.com/React-Sofia/" target="_blank">React.Sofia</a> meetup.
+    Radoslav is currently the Head of Engineering at <a href="https://www.producthunt.com/" target="_blank">Product Hunt</a> (by <a href="https://angel.co/" target="_blank">AngelList</a>). Lately, juggling between Ruby and JavaScript projects. Organizer of <a href="http://react-not-a-conf.com/" target="_blank">React.NotAConf</a> conference and <a href="https://www.meetup.com/React-Sofia/" target="_blank">React.Sofia</a> meetup.
 - first_name: Piotr
   last_name: Murach
   twitter_handle: '@piotr_murach'
   photo_url: /assets/images/pages/home/speakers/piotr-murach.jpg
   bio: |
-    Piotr  is a software engineer with an interest in tooling, automation, and testing. A creator of over 50 Ruby gems including the <a href=" https://piotrmurach.github.io/tty/" target="_blank">TTY toolkit</a> for building sleek command line apps. He writes about software, technology and more on <a href="https://piotrmurach.com" target="_blank">piotrmurach.com</a>.
+    Piotr is a Software Engineer with an interest in tooling, automation, and testing. A creator of over 50 Ruby gems including the <a href=" https://piotrmurach.github.io/tty/" target="_blank">TTY toolkit</a> for building sleek command line apps. He writes about software, technology and more on <a href="https://piotrmurach.com" target="_blank">piotrmurach.com</a>.
 - first_name: Giovanni
   last_name: Sakti
   twitter_handle: '@giosakti'
   photo_url: /assets/images/pages/home/speakers/giovanni-sakti.jpg
   bio: |
-    Gio comes from Jakarta where he works for GO-JEK as a systems engineer. He organizes various meetups, including <a href="https://ruby.id/">ruby.id</a> and <a href="https://www.jakartajs.org/" target="_blank">jakartajs.org</a>. His interests include programming languages and developer automation.
+    Gio comes from Jakarta where he works for <a href="https://www.go-jek.com/" target="_blank">GO-JEK</a> as a Systems Engineer. He organizes various meetups, including <a href="https://ruby.id/">ruby.id</a> and <a href="https://www.jakartajs.org/" target="_blank">jakartajs.org</a>. His interests include programming languages and developer automation.
 - first_name: Vishal
   last_name: Chandnani
   twitter_handle: ''
@@ -27,73 +27,73 @@
   twitter_handle: '@leostera'
   photo_url: /assets/images/pages/home/speakers/leandro-ostera.jpg
   bio: |
-    Leandro is a Research Engineer at SRC, where he's rebuilding the foundations of the Web using ReasonML and the Actor model. In the past he's worked at Swedish unicorns Klarna and Spotify.
+    Leandro is a Research Engineer at SRC, where he's rebuilding the foundations of the Web using <a href="https://reasonml.github.io/" target="_blank">ReasonML</a> and the Actor model. In the past he has worked at Swedish unicorns <a href="https://www.klarna.com/" target="_blank">Klarna</a> and <a href="https://www.spotify.com/" target="_blank">Spotify</a>.
 - first_name: Tae Noppakun
   last_name: Wongsrinoppakun
   twitter_handle: '@tae8838'
   photo_url: /assets/images/pages/home/speakers/tae-wongsrinoppakun.jpg
   bio: |
-    Tae is originally from Bangkok, but lives in Tokyo. Currently, he is a software engineer at <a href="https://wovn.io/" target="_blank">Wovn Technologies</a> building a platform to localize the internet. If he's not in front of his laptop or Nintendo Switch, he is probably on a mountain somewhere.
+    Tae is originally from Bangkok, but lives in Tokyo. Currently, he is a Software Engineer at <a href="https://wovn.io/" target="_blank">Wovn Technologies</a> building a platform to localize the internet. If he is not in front of his laptop or Nintendo Switch, he is probably on a mountain somewhere.
 - first_name: Kazuma
   last_name: Furuhashi
   twitter_handle: '@284km'
   photo_url: /assets/images/pages/home/speakers/kazuma-furuhashi.jpg
   bio: |
-    Kazuma Furuhashi is a programmer and the creator of a visualization library named <a href="https://github.com/red-data-tools/charty" target="_blank">Charty</a>. A member of <a href="https://asakusarb.esa.io/" target="_blank">Asakusa.rb</a> and <a href="https://red-data-tools.github.io/" target="_blank">Red Data Tools</a>. Working at <a href="https://speee.jp/"  target="_blank">Speee Inc</a>.
+    Kazuma is a Programmer and the Creator of a visualization library named <a href="https://github.com/red-data-tools/charty" target="_blank">Charty</a>. A member of <a href="https://asakusarb.esa.io/" target="_blank">Asakusa.rb</a> and <a href="https://red-data-tools.github.io/" target="_blank">Red Data Tools</a>. Working at <a href="https://speee.jp/"  target="_blank">Speee Inc</a>.
 - first_name: Gabriel
   last_name: Fortuna
   twitter_handle: '@gee_forr'
   photo_url: /assets/images/pages/home/speakers/gabriel-fortuna.jpg
   bio: |
-    Gabriel is the founder of Zero One Bespoke Software Development, a South African Ruby consultancy that specialises in software for the Telecommunications industry. In his day job, he tells computers what to do. Sometimes they listen.
+    Gabriel is the Founder of <a href="https://www.zero-one.io/" target="_blank">Zero One Bespoke Software Development</a>, a South African Ruby consultancy that specialises in software for the Telecommunications industry. In his day job, he tells computers what to do. Sometimes they listen.
 - first_name: Rodrigo
   last_name: Urubatan
   twitter_handle: '@urubatan'
   photo_url: /assets/images/pages/home/speakers/rodrigo-urubatan.jpg
   bio: |
-    Rodrigo Urubatan is a polyglot software developer since 1997. He currently works for Brightwire and has the goal to help Ruby developers to use the best tools for each job, so they can solve hard problems, with less bugs and have more free time.
+    Rodrigo is a experienced polyglot Software Developer since 1997. He currently works for <a href="https://www.brightwire.com/" target="_blank">Brightwire</a> and has the goal to help Ruby developers to use the best tools for each job, so they can solve hard problems, with less bugs and have more free time.
 - first_name: Sergey
   last_name: Dolganov
   twitter_handle: '@ss_dolganov'
   photo_url: /assets/images/pages/home/speakers/sergey-dolganov.jpg
   bio: |
-    Sergey is an experienced software developer interested in building a strong and sustainable community around OSS and likes to discuss different ways to profile, debug and optimize applications. He also loves dogs and is a drummer and musician.
+    Sergey is an experienced Software Developer interested in building a strong and sustainable community around OSS and likes to discuss different ways to profile, debug and optimize applications. He also loves dogs and is a drummer and musician.
 - first_name: Jaroslava
   last_name: Košanová
   twitter_handle: '@jajina_k'
   photo_url: /assets/images/pages/home/speakers/jaroslava-kosanova.jpg
   bio: |
-    Jarka is Ruby Backend Engineer working on GitLab, a single application with features for the entire DevOps lifecycle. She really enjoys working for the remote-only company because she has an active lifestyle and takes care of her 1.5 year old daughter.
+    Jarka is Ruby Backend Engineer working on <a href="https://about.gitlab.com/" target="_blank">GitLab</a>, a single application with features for the entire DevOps lifecycle. She really enjoys working for the remote-only company because she has an active lifestyle and takes care of her 1.5 year old daughter.
 - first_name: Harley Davidson
   last_name: Karel
   twitter_handle: '@harleydavidkar1'
   photo_url: /assets/images/pages/home/speakers/harley-davidson-karel.jpg
   bio: |
-    Harley is an application security consultant for Vantage Point Security. Certified Ethical Hacker, speaker for several conferences in Jakarta, Kuala Lumpur, Singapore, Tokyo and Bangkok with topics related to application security.
+    Harley is an Application Security Consultant for <a href="https://www.vantagepoint.sg/" target="_blank">Vantage Point Security</a>. Certified Ethical Hacker, speaker for several conferences in Jakarta, Kuala Lumpur, Singapore, Tokyo and Bangkok with topics related to application security.
 - first_name: Shweta
   last_name: Kale
   twitter_handle: '@shwetakale13'
   photo_url: /assets/images/pages/home/speakers/shweta-kale.jpg
   bio: |
-    Shweta is an avid Rubyist and Gopher working with Josh Software from past 5 years. She co-organises RubyConf India, DeccanRuby Conf, RailsGirls Pune and GoLang Girls Pune.
+    Shweta is an avid Rubyist and Gopher working with <a href="https://www.joshsoftware.com/" target="_blank">Josh Software</a> from past 5 years. She co-organises <a href="https://www.rubyconfindia.org/" target="_blank">RubyConf India</a>, <a href="https://www.deccanrubyconf.org/" target="_blank">Deccan RubyConf</a>, RailsGirls Pune and GoLang Girls Pune.
 - first_name: Phil
   last_name: Nash
   twitter_handle: '@philnash'
   photo_url: /assets/images/pages/home/speakers/phil-nash.jpg
   bio: |
-    <a href="https://philna.sh">Phil</a> is a developer evangelist for Twilio and a Google Developer Expert. 10 years of experience building with JavaScript, Ruby and Swift. Sometimes he makes his own beer, but he is more likely to be found discovering new ones around the world.
+    <a href="https://philna.sh">Phil</a> is a Developer Evangelist for <a href="https://twilio.com/" target="_blank">Twilio</a> and a Google Developer Expert. 10 years of experience building with JavaScript, Ruby and Swift. Sometimes he makes his own beer, but he is more likely to be found discovering new ones around the world.
 - first_name: Vipul
   last_name: Am
   twitter_handle: '@vipulnsward'
   photo_url: /assets/images/pages/home/speakers/vipul-am.jpg
   bio: |
-    Vipul is the founder of <a href="https://www.saeloun.com/" target="_blank">Saeloun Inc</a>, a Ruby on Rails Consultancy. Part of the Rails team. Author of ReactJS by Example. He helps run the Pune Ruby and ReactJS Pune communities. He also organizes DeccanRubyConf in Pune.
+    Vipul is the Founder of <a href="https://www.saeloun.com/" target="_blank">Saeloun Inc</a>, a Ruby on Rails Consultancy. Part of the Rails team. Author of ReactJS by Example. He helps run the Pune Ruby and ReactJS Pune communities. He also organizes <a href="https://www.deccanrubyconf.org/" target="_blank">Deccan RubyConf</a> in Pune.
 - first_name: Melvrick 
   last_name: Goh
   twitter_handle: ''
   photo_url: /assets/images/pages/home/speakers/melvrick-chun.jpg
   bio: |
-    Melvrick is a Senior Engineer at Ascenda Loyalty and currently leads TransferConnect. He likes coding an Ruby makes it even more joyful. Outside of work, he likes reading, an occasional jog and writing in the 3rd person for conference intros.
+    Melvrick is a Senior Engineer at <a href="https://www.ascendaloyalty.com/" target="_blank">Ascenda Loyalty</a> and currently leads TransferConnect. He likes coding an Ruby makes it even more joyful. Outside of work, he likes reading, an occasional jog and writing in the 3rd person for conference intros.
 - first_name: Enrique
   last_name: Mogollan
   twitter_handle: '@mogox'
@@ -105,16 +105,16 @@
   twitter_handle: '@anton_davydov'
   photo_url: /assets/images/pages/home/speakers/anton-davydov.jpg
   bio: |
-    Anton is a Hanami and dry-rb core developer and an indie developer from Moscow. He works on different open source projects and builds space-rocket ships at night.
+    Anton is a Hanami and dry-rb Core Developer and an indie developer from Moscow. He works on different open source projects and builds space-rocket ships at night.
 - first_name: Elle
   last_name: Meredith
   twitter_handle: '@aemeredith'
   photo_url: /assets/images/pages/home/speakers/elle-meredith.jpg
   bio: |
-    Elle is a web developer with over ten years experience writing Ruby and Rails. Currently at Blackmill, previously Development Director at Thoughtbot New York. When not immersed in the Ruby community, she is likely immersed in water, or lately, in bread flour.
+    Elle is a Web Developer with over ten years experience writing Ruby and Rails. Currently at <a href="https://blackmill.co/" target="_blank">Blackmill</a>, previously Development Director at <a href="https://thoughtbot.com/" target="_blank">Thoughtbot</a> New York. When not immersed in the Ruby community, she is likely immersed in water, or lately, in bread flour.
 - first_name: Janko
   last_name: Marohnić
   twitter_handle: '@jankomarohnic'
   photo_url: /assets/images/pages/home/speakers/janko-marohnic.jpg
   bio: |
-    Janko is a Ruby off Rails evangelist and a frequent open source contributor. He firmly believes the future of the Ruby ecosystem lies outside of Rails, and frequently blogs about it. He's the creator of Shrine, a modern file attachment library for Ruby.
+    Janko is a Ruby off Rails evangelist and a frequent open source contributor. He firmly believes the future of the Ruby ecosystem lies outside of Rails, and frequently blogs about it. He is the Creator of <a href="https://github.com/shrinerb/shrine" target="_blank">Shrine</a>, a modern file attachment library for Ruby.
