Fix inconsistently links in bios to the same company

--- a/_data/speakers/keynote.yml
+++ b/_data/speakers/keynote.yml
@@ -21,4 +21,4 @@
   twitter_handle: "@AjeyGore"
   photo_url: /assets/images/pages/home/speakers/ajey-gore.jpg
   bio: |
-    Ajey is the Group CTO of Go-Jek. With 17 years of experience in building core technology strategy across diverse domains, Ajey has helped several businesses through technology transformations at ThoughtWorks and CodeIgnition.
+    Ajey is the Group CTO of <a href="https://www.go-jek.com/" target="_blank">Go-Jek</a>. With 17 years of experience in building core technology strategy across diverse domains, Ajey has helped several businesses through technology transformations at <a href="https://www.thoughtworks.com/" target="_blank">ThoughtWorks</a> and CodeIgnition.
