--- a/_data/speakers/speakers.yml
+++ b/_data/speakers/speakers.yml
@@ -15,7 +15,7 @@
   twitter_handle: '@giosakti'
   photo_url: /assets/images/pages/home/speakers/giovanni-sakti.jpg
   bio: |
-    Gio comes from Jakarta where he works for <a href="https://www.go-jek.com/" target="_blank">GO-JEK</a> as a Systems Engineer. He organizes various meetups, including <a href="https://ruby.id/">ruby.id</a> and <a href="https://www.jakartajs.org/" target="_blank">jakartajs.org</a>. His interests include programming languages and developer automation.
+    Gio comes from Jakarta where he works for <a href="https://www.go-jek.com/" target="_blank">Go-Jek</a> as a Systems Engineer. He organizes various meetups, including <a href="https://ruby.id/">ruby.id</a> and <a href="https://www.jakartajs.org/" target="_blank">jakartajs.org</a>. His interests include programming languages and developer automation.
 - first_name: Vishal
   last_name: Chandnani
   twitter_handle: ''
@@ -105,7 +105,7 @@
   twitter_handle: '@anton_davydov'
   photo_url: /assets/images/pages/home/speakers/anton-davydov.jpg
   bio: |
-    Anton is a Hanami and dry-rb Core Developer and an indie developer from Moscow. He works on different open source projects and builds space-rocket ships at night.
+    Anton is a <a href="https://hanamirb.org/" target="_blank">Hanami</a> and <a href="https://dry-rb.org/" target="_blank">dry-rb</a> Core Developer and an indie developer from Moscow. He works on different open source projects and builds space-rocket ships at night.
 - first_name: Elle
   last_name: Meredith
   twitter_handle: '@aemeredith'
