Add speaker sponsor "Ascenda Loyalty"

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -28,8 +28,11 @@
 - title: Speakers Sponsors & Individuals
   slug: speaker
   companies:
+    - name: Ascenda Loyalty
+      url: https://www.ascendaloyalty.com/
+      logo_url: /assets/images/pages/home/sponsors/logo-ascenda.jpg
     - name: Brightwire
-      url: https://www.brightwire.com
+      url: https://www.brightwire.com/
       logo_url: /assets/images/pages/home/sponsors/logo-brightwire.jpg
     - name: Josh
       url: https://www.joshsoftware.com/
