Add speaker sponsor "Saeloun"

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -37,6 +37,9 @@
     - name: Josh
       url: https://www.joshsoftware.com/
       logo_url: /assets/images/pages/home/sponsors/logo-josh.jpg
+    - name: Saeloun
+      url: https://www.saeloun.com/
+      logo_url: /assets/images/pages/home/sponsors/logo-saeloun.jpg
     - name: Speee
       url: https://speee.jp/
       logo_url: /assets/images/pages/home/sponsors/logo-speee.jpg
