Shorten the bio for Gabriel Fortuna to fit in the bio box

--- a/_data/speakers/speakers.yml
+++ b/_data/speakers/speakers.yml
@@ -45,7 +45,7 @@
   twitter_handle: '@gee_forr'
   photo_url: /assets/images/pages/home/speakers/gabriel-fortuna.jpg
   bio: |
-    Gabriel is the Founder of <a href="https://www.zero-one.io/" target="_blank">Zero One Bespoke Software Development</a>, a South African Ruby consultancy that specialises in software for the Telecommunications industry. In his day job, he tells computers what to do. Sometimes they listen.
+    Gabriel is the Founder of <a href="https://www.zero-one.io/" target="_blank">Zero One Bespoke Software Development</a>, a South African Ruby consultancy that specialises in software for the Telecom industry. In his day job, he tells computers what to do. Sometimes they listen.
 - first_name: Rodrigo
   last_name: Urubatan
   twitter_handle: '@urubatan'
