Use https for the Zero One sponsor website

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -50,7 +50,7 @@
       url: https://wovn.io/
       logo_url: /assets/images/pages/home/sponsors/logo-wovn.jpg
     - name: Zero One
-      url: http://www.zero-one.io/
+      url: https://www.zero-one.io/
       logo_url: /assets/images/pages/home/sponsors/logo-zero-one.jpg
 - title: Partners
   slug: partner
