Add speaker sponsor "TTY Toolkit"

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -46,6 +46,9 @@
     - name: Speee
       url: https://speee.jp/
       logo_url: /assets/images/pages/home/sponsors/logo-speee.jpg
+    - name: TTY Toolkit
+      url: https://ttytoolkit.org/
+      logo_url: /assets/images/pages/home/sponsors/logo-tty-toolkit.jpg
     - name: Wovn
       url: https://wovn.io/
       logo_url: /assets/images/pages/home/sponsors/logo-wovn.jpg
