Visually differentiate sponsors who also act as partners (#112)
* Visualize differentiate sponsors who also act as partners

* Fix typo caused by rebase

* Refactor CSS margins for all sponsors list to increase the bottom margin consistently

* Increase even more spce between Gold sponsors logos on large screens

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -10,6 +10,8 @@
     - name: Nimble
       url: https://nimblehq.co/
       logo_url: /assets/images/pages/home/sponsors/logo-nimble.jpg
+      is_partner: true
+      partner_text: Official Partner
     - name: Omise
       url: https://www.omise.co/
       logo_url: /assets/images/pages/home/sponsors/logo-omise.jpg
@@ -19,6 +21,8 @@
     - name: Gitlab
       url: https://about.gitlab.com/
       logo_url: /assets/images/pages/home/sponsors/logo-gitlab.jpg
+      is_partner: true
+      partner_text: Swag Sponsor
     - name: Matestack
       url: https://matestack.org/
       logo_url: /assets/images/pages/home/sponsors/logo-matestack.jpg
