--- a/_data/speakers/speakers.yml
+++ b/_data/speakers/speakers.yml
@@ -21,7 +21,7 @@
   twitter_handle: ''
   photo_url: /assets/images/pages/home/speakers/vishal-chandnani.jpg
   bio: |
-    Vishal test-drives clean code at <a href="https://www.defmethod.com/" target="_blank">Def Method</a> in New York City. Previously, he developed software for the US Government Intelligence Community at The Boeing Company and software for wireless communication systems at Lucent Technologies.
+    Vishal is the Head of Engineering (Astral) at IEX in New York City. Prior to IEX, he worked as a Senior Software Consultant at Def Method. At The Boeing Company, he developed software for the US Government Intelligence Community. Vishal started his career at Lucent Technologies (Bell Labs Innovations), where he developed software for wireless communication systems.
 - first_name: Leandro
   last_name: Ostera
   twitter_handle: '@leostera'
