Shorten Vishal Chandnani bio so that it fits into the bio container

--- a/_data/speakers/speakers.yml
+++ b/_data/speakers/speakers.yml
@@ -21,7 +21,7 @@
   twitter_handle: ''
   photo_url: /assets/images/pages/home/speakers/vishal-chandnani.jpg
   bio: |
-    Vishal is the Head of Engineering (Astral) at IEX in New York City. Prior to IEX, he worked as a Senior Software Consultant at Def Method. At The Boeing Company, he developed software for the US Government Intelligence Community. Vishal started his career at Lucent Technologies (Bell Labs Innovations), where he developed software for wireless communication systems.
+    Vishal is the Head of Engineering (Astral) at IEX in New York City. Prior to IEX, he worked as a Senior Software Consultant at Def Method. At The Boeing Company, he developed software for the US Government Intelligence Community.
 - first_name: Tae Noppakun
   last_name: Wongsrinoppakun
   twitter_handle: '@tae8838'
