move charles nutter to ajey's keynote spot

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -54,10 +54,7 @@
         name: Enrique Mogollan
         photo_url: /assets/images/pages/home/speakers/enrique-mogollan.jpg
     - time: 15:00 - 15:30
-      title: Scalable Applications with JRuby
-      speaker:
-        name: Charles Nutter
-        photo_url: /assets/images/pages/home/speakers/charles-nutter.jpg
+      title: TBD
     - time: 15:30 - 15:50
       title: Tea break
     - time: 15:50 - 16:20
@@ -71,10 +68,10 @@
         name: Gabriel Fortuna
         photo_url: /assets/images/pages/home/speakers/gabriel-fortuna.jpg
     - time: 16:50 - 17:30
-      title: Closing Keynote
+      title: Closing Keynote: Scalable Applications with JRuby
       speaker:
-        name: Ajey Gore
-        photo_url: /assets/images/pages/home/speakers/ajey-gore.jpg
+        name: Charles Nutter
+        photo_url: /assets/images/pages/home/speakers/charles-nutter.jpg
     - time: 17:30 - 17:40
       title: Closing Remarks/Announcements
     - time: 18:30 - 23:00
