--- a/_data/speakers/keynote.yml
+++ b/_data/speakers/keynote.yml
@@ -16,9 +16,9 @@
   photo_url: /assets/images/pages/home/speakers/saron-yitbarek.jpg
   bio: |
     Saron is the CEO and founder of <a href="https://twitter.com/CodeNewbies" target="_blank">CodeNewbie</a>, the most supportive community of programmers and people learning to code. She's also a developer, speaker, and podcaster.
-- first_name: Ajey
-  last_name: Gore
-  twitter_handle: "@AjeyGore"
-  photo_url: /assets/images/pages/home/speakers/ajey-gore.jpg
+- first_name: Charles
+  last_name: Nutter
+  twitter_handle: '@headius'
+  photo_url: /assets/images/pages/home/speakers/charles-nutter.jpg
   bio: |
-    Ajey is the Group CTO of <a href="https://www.go-jek.com/" target="_blank">Go-Jek</a>. With 17 years of experience in building core technology strategy across diverse domains, Ajey has helped several businesses through technology transformations at <a href="https://www.thoughtworks.com/" target="_blank">ThoughtWorks</a> and CodeIgnition.
+    Charles is one of the JRuby guys. He is a Ruby Hero and Java Champion too! He works every day to make JRuby the best JVM-based Ruby possible while pushing JVM folks and other language authors to keep improving the platform.
