List Pigeonhole as a partner

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -91,3 +91,9 @@
     - name: Notion
       url: https://www.notion.so/
       logo_url: /assets/images/pages/home/sponsors/logo-notion.jpg
+    - name: Pigeonhole
+      url: https://pigeonhole.at/
+      logo_url: /assets/images/pages/home/sponsors/logo-pigeonhole.jpg
+      logo_style: margin-bottom:10px;
+      is_partner: true
+      partner_text: Live Audience Engagement
