Change Pigeonhole URL to .com

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -92,7 +92,7 @@
       url: https://www.notion.so/
       logo_url: /assets/images/pages/home/sponsors/logo-notion.jpg
     - name: Pigeonhole
-      url: https://pigeonhole.at/
+      url: https://pigeonholelive.com/
       logo_url: /assets/images/pages/home/sponsors/logo-pigeonhole.jpg
       logo_style: margin-bottom:10px;
       is_partner: true
